[package]
name = "rpbcopyd"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "rpbcopyd"
path = "src/rpbcopyd.rs"

[[bin]]
name = "rpbcopy"
path = "src/rpbcopy.rs"

[[bin]]
name = "rpbpaste"
path = "src/rpbpaste.rs"

[dependencies]
axum = "0.7.9"
clap = { version = "4.5.23", features = ["derive"] }
daemonize = "0.5.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.41.1", features = ["full"] }
